--- a/framework/OSMFTest/src/OSMFTest.mxml
+++ b/framework/OSMFTest/src/OSMFTest.mxml
@@ -2,11 +2,11 @@
 
 <!-- This is an auto generated file and is not intended for modification. -->
 
-<s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009"
-					   xmlns:s="library://ns.adobe.com/flex/spark"
-					   xmlns:mx="library://ns.adobe.com/flex/mx"
-					   xmlns:flexui="flexunit.flexui.*"
-					   creationComplete="onCreationComplete()">
+<mx:Application xmlns:fx="http://ns.adobe.com/mxml/2009"
+				xmlns:mx="library://ns.adobe.com/flex/mx"
+				creationComplete="onCreationComplete()"
+				
+				>
 	<fx:Script>
 		<![CDATA[
 			import org.flexunit.listeners.*;
@@ -203,4 +203,4 @@
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
-</s:WindowedApplication>
+</mx:Application>
