build system changes: added fail on test suite fail/error, extracted test suite in .as file from .mxml
git-svn-id: http://svn.code.sf.net/adobe/osmf/svn/osmf/trunk@2387 a9308255-753e-0410-a2e9-80b3fbc4fff6

--- a/player/StrobeMediaPlaybackTest/src/StrobeMediaPlaybackTest.mxml
+++ b/player/StrobeMediaPlaybackTest/src/StrobeMediaPlaybackTest.mxml
@@ -23,7 +23,7 @@
 				//core.addListener( new TraceListener() ); - For AS3 Projects
 				//core.addListener( TextListener.getDefaultTextListener( LogEventLevel.DEBUG ) ); - For Flex Projects
 				
-				core.run(StrobeMediaPlaybackTests);				
+				core.run(StrobeMediaPlaybackTests.currentRunTestSuite());				
 			}
 			
 		]]>
