--- a/buildtools/testProjectTemplate.mxml
+++ b/buildtools/testProjectTemplate.mxml
@@ -24,7 +24,7 @@
 				//core.addListener( new TraceListener() ); - For AS3 Projects
 				//core.addListener( TextListener.getDefaultTextListener( LogEventLevel.DEBUG ) ); - For Flex Projects
 				
-				core.run(StrobeMediaPlaybackTests.currentRunTestSuite());
+				core.run([This value will be overwritten in the testsuite name].currentRunTestSuite());
 			}
 			
 		]]>
